--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "projt/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "projt/dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/projt/dist/$1"
-    }
-  ],
   "buildCommand": "cd projt && npm run build",
-  "devCommand": "cd projt && npm run dev",
+  "outputDirectory": "projt/dist",
   "installCommand": "cd projt && npm install"
 }
