--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "version": 2,
   "buildCommand": "cd projt && npm run build",
   "outputDirectory": "projt/dist",
-  "installCommand": "cd projt && npm install"
+  "installCommand": "cd projt && npm install",
+  "framework": "vite"
 }
