FINAL FIX: Resolve all Vercel deployment issues with npx and optimized config

--- a/package.json
+++ b/package.json
@@ -2,12 +2,8 @@
   "name": "devjob-monorepo",
   "version": "1.0.0",
   "scripts": {
-    "build": "cd projt && npm install && npm run build",
+    "build": "cd projt && npm install && npx vite build --base=./",
     "dev": "cd projt && npm run dev",
     "start": "cd backend && npm start"
-  },
-  "workspaces": [
-    "projt",
-    "backend"
-  ]
+  }
 }
