ULTIMATE FIX: Absolute paths and standard Vite config for Vercel

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "devjob-monorepo",
   "version": "1.0.0",
   "scripts": {
-    "build": "cd projt && npm install && npx vite build --base=./",
+    "build": "cd projt && npm install && npm run build",
     "dev": "cd projt && npm run dev",
     "start": "cd backend && npm start"
   }
