--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://khalloukimouna123_db_user:ktzhzKWgh7r9dpeS@cluster0.rhsm0nk.mongodb.net/gestion-candidats?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=devjob_recruiter_secret_2024
